frontend/test/should_fail/deque_002.grg
using deque_model_001;

rule assignWrongType {
	a:A;

	modify {
		eval {
			a.intDeque = a.intDeque + deque<int>] a.stringValue [;
		}
	}
}
